changes:  - This blurred gradient was meant to be fixed down and work in complex with other visuals  - Deposit button on wallet is inconsistent with other buttons  - Hov effect at tabs / date picker  - added expandmore icon to more information on transaction.
https://github.com/omgnetwork/optimism/issues/432

--- a/packages/omgx/wallet-frontend/src/containers/transactions/Transactions.module.scss
+++ b/packages/omgx/wallet-frontend/src/containers/transactions/Transactions.module.scss
@@ -113,6 +113,10 @@
   margin: 0px 15px;
   position: relative;
 
+  &:hover {
+    outline: #fff auto 1px;
+  }
+
   &::after {
     content: '';
     width: 0;
